# pypptkit

./: README.md  README.rst  pyproject.toml  requirements.thawed.txt  requirements.txt  setup.py
config/: project.py  python.py
pypptkit/: configs.py  main.py  static.py  utils.py
pypptkit/endpoints/: group_default.py  main.py
src/pypptkit/: configs.py  main.py  static.py  utils.py
