[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pypptkit"
version = "0.0.5"
requires-python = ">=3.12"
authors = [
	{ name = "Mark Veltzer", email = "mark.veltzer@gmail.com" }
]
maintainers = [
	{ name = "Mark Veltzer", email = "mark.veltzer@gmail.com" }
]
description = "pypptkit helps doing things with ppt files"
readme = "README.md"
license = "MIT"
keywords=[
    "ppt",
    "download",
    "convert-to-text",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "pytconf",
    "pylogconf",
    "python-pptx",
    "pyvardump",
]

[project.urls]
"Homepage" = "https://github.com/veltzer/pypptkit"
"Bug Tracker" = "https://github.com/veltzer/pypptkit/issues"
"Documentation" = "https://veltzer.github.io/pypptkit"
"Download" = "https://pypi.org/project/pypptkit/"
"Repository" = "https://github.com/veltzer/pypptkit"

[project.scripts]
pypptkit = "pypptkit.main:main"

[tool.ruff]
line-length = 130

[tool.pytest.ini_options]
pythonpath = ["src"]
